--- a/index4.html
+++ b/index4.html
@@ -9,25 +9,25 @@
 
 	<body text="#336699" bgcolor="#000000">
 
-			<font face="Verdana" size="3" color="#fff799"><big> Виды форматирования текста</big></font><br>
+			<font face="Verdana" size=+3 color="#fff799"><big> Виды форматирования текста</big></font><br>
 
 		<p align="center">
-			<font face="Courier New" size="1" color="#6dcff6">Выравнивание по центру</font>
+			<font face="Courier New" size=+1 color="#6dcff6">Это выравнивание по центру</font>
 		</p><br>
 
 
 		<p align="left">
-			<font face="Impact" size="1" color="#fff200">Выравнивание по левому краю</font>
+			<font face="Impact" size=+1 color="#fff200">Это выравнивание по левому краю. Давайте убедимся в этом? Давайте убедимся в этом!</font>
 		</p><br>
 
 
 		<p align="right">
-			<font face="Book Antique" size="1" color="#8dc63f">Выравнивание по правому краю</font>
+			<font face="Book Antique" size=+1 color="#8dc63f">Это выравнивание по правому краю. Давайте убедимся в этом? Давайте убедимся в этом!</font>
 		</p><br>
 
 
 		<p align="justify">
-			<font face="Comic Sans MS" size="1" color="#8dc63f">Выравнивание по ширине</font>
+			<font face="Comic Sans MS" size=-1 color="#8dc63f">Выравнивание по ширине. Давайте не будем убеждаться в этом?.................</font>
 		</p><br>
 
 		
