--- a/index5.html
+++ b/index5.html
@@ -3,7 +3,7 @@
 	<head>
 	    <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-		<title>Заголовок!</title>
+		<title>Задание заголовков текста</title>
 	</head>
 
 
@@ -11,12 +11,12 @@
 
 		<font face="Arial" color="#754c24">Виды заголовков текста</font><br>
 
-		<h1>Текст 1</h1>
-		<h2>Текст 2</h2>
-		<h3>Текст 3</h3>
-		<h4>Текст 4</h4>
-		<h5>Текст 5</h5>
-		<h6>Текст 6</h6>
+		<h1>текст 1</h1>
+		<h2>текст 2</h2>
+		<h3>текст 3</h3>
+		<h6>текст 4</h6>
+		<h4>текст 5</h4>
+		<h5>текст 6</h5>
 			
 		
 		
