--- a/index5.html
+++ b/index5.html
@@ -11,12 +11,12 @@
 
 		<font face="Arial" color="#754c24">Виды заголовков текста</font><br>
 
-		<h1>текст 1</h1>
-		<h2>текст 2</h2>
-		<h3>текст 3</h3>
-		<h6>текст 4</h6>
-		<h4>текст 5</h4>
-		<h5>текст 6</h5>
+		<h1>21 октября 1993 года</h1>
+		<h2>Сто шестьдесят сантиметров</h2>
+		<h3>Один час в день</h3>
+		<h6>Business Analysis</h6>
+		<h4>2000 год</h4>
+		<h5>Дружу со всеми</h5>
 			
 		
 		
