--- a/index7.html
+++ b/index7.html
@@ -9,7 +9,7 @@
 
 	<body bgcolor="#c69c6c">
 
-	<h1><font color="#0000e7">Решение задач</font></h1>
+	<h1><font face="Arial" color="#483D8B">Решение задач</font></h1>
 
 	<p>
 		<b><U>Задача 1.</U> Решите квадратное уравнение:</b><br><br>
